Fix outdated form of portage configuration; import portage targets

--- a/cmake/portageConfig.cmake.in
+++ b/cmake/portageConfig.cmake.in
@@ -11,81 +11,57 @@ set(PORTAGE_VERSION_MAJOR @PORTAGE_VERSION_MAJOR@ CACHE STRING "Major version of
 set(PORTAGE_VERSION_MINOR @PORTAGE_VERSION_MINOR@ CACHE STRING "Minor version of PORTAGE")
 set(PORTAGE_VERSION_MINOR @PORTAGE_VERSION_PATCH@ CACHE STRING "Patch version of PORTAGE")
 
+# Portage installation path
+set(PORTAGE_ROOT @CMAKE_INSTALL_PREFIX@ CACHE PATH "Path to Portage installation")
 
-# Compiler Definitions
-set(CMAKE_C_COMPILER @CMAKE_C_COMPILER@ CACHE FILEPATH "C Compiler used for compiling PORTAGE")
-set(CMAKE_CXX_COMPILER @CMAKE_CXX_COMPILER@ CACHE FILEPATH "CXX Compiler used for compiling PORTAGE")
+# Portage library
+set(PORTAGE_LIBRARIES @PORTAGE_LIBRARIES@ CACHE STRING "Name of Portage Library target")
 
+# Tangram
+set(PORTAGE_ENABLE_TANGRAM @PORTAGE_ENABLE_TANGRAM@ CACHE BOOL "Is Tangram enabled?")
+set(TANGRAM_ROOT @TANGRAM_ROOT@ CACHE STRING "Path to Tangram installation")
 
-# Compiler Flags
-set(CMAKE_C_FLAGS "@CMAKE_C_FLAGS@" CACHE STRING "PORTAGE C compiler flags")
-set(CMAKE_C_FLAGS_DEBUG "@CMAKE_C_FLAGS_DEBUG@" CACHE STRING "PORTAGE C compiler flags")
-set(CMAKE_C_FLAGS_RELEASE "@CMAKE_C_FLAGS_RELEASE@" CACHE STRING "PORTAGE C compiler flags")
-set(CMAKE_C_FLAGS_MINSIZEREL "@CMAKE_C_FLAGS_MINSIZEREL@" CACHE STRING "PORTAGE C compiler flags")
-set(CMAKE_C_FLAGS_RELWITHDEBINFO "@CMAKE_C_FLAGS_RELWITHDEBINFO@" CACHE STRING "PORTAGE C compiler flags")
-
-set(CMAKE_CXX_FLAGS "@CMAKE_CXX_FLAGS@" CACHE STRING "PORTAGE C compiler flags")
-set(CMAKE_CXX_FLAGS_DEBUG "@CMAKE_CXX_FLAGS_DEBUG@" CACHE STRING "PORTAGE C compiler flags")
-set(CMAKE_CXX_FLAGS_RELEASE "@CMAKE_CXX_FLAGS_RELEASE@" CACHE STRING "PORTAGE C compiler flags")
-set(CMAKE_CXX_FLAGS_MINSIZEREL "@CMAKE_CXX_FLAGS_MINSIZEREL@" CACHE STRING "PORTAGE C compiler flags")
-set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "@CMAKE_CXX_FLAGS_RELWITHDEBINFO@" CACHE STRING "PORTAGE C compiler flags")
-
-# PORTAGE Build info
-set(PORTAGE_BUILD_TYPE @CMAKE_BUILD_TYPE@ CACHE STRING "PORTAGE build type")
-
-# PORTAGE library 
-set(PORTAGE_LIBRARY_NAME @PORTAGE_LIBRARY@ CACHE STRING "Name of the Portage library")
-
-# PORTAGE includes
-set(PORTAGE_INCLUDE_DIR @CMAKE_INSTALL_PREFIX@/include CACHE PATH "PORTAGE include file locations")
+# Wonton
+set(WONTON_ROOT @WONTON_ROOT@ CACHE PATH "Path to Wonton installation")
 
 # PORTAGE options
 
 set(PORTAGE_ENABLE_MPI @PORTAGE_ENABLE_MPI@ CACHE BOOL "Enable MPI Parallelism dfor Portage")
-set(WONTON_ENABLE_MPI @WONTON_ENABLE_MPI@ CACHE BOOL "Enable MPI Parallelism for Wonton")
 
-set(WONTON_DIR @WONTON_DIR@ CACHE PATH "Path to WONTON INSTALLATION")
+set(PORTAGE_ENABLE_THRUST @PORTAGE_ENABLE_THRUST@ CACHE BOOL "Enable NVIDIA Thrust")
 
+set(PORTAGE_ENABLE_FleCSI @PORTAGE_ENABLE_FleCSI@ CACHE BOOL "Use FleCSI")
 
-set(ENABLE_FleCSI @ENABLE_FleCSI@ CACHE BOOL "Use FleCSI")
-set(FleCSI_INCLUDE_DIRS @FleCSI_INCLUDE_DIR@ CACHE PATH "FleCSI include dirs")
-set(FleCSISP_INCLUDE_DIRS @FleCSISP_INCLUDE_DIR@ CACHE PATH "FleCSI-SP include dirs")
-set(FleCSI_LIBRARIES @FleCSI_LIBRARIES@ CACHE STRING "FleCSI Libraries")
-set(FleCSISP_LIBRARIES @FleCSISP_LIBRARIES@ CACHE PATH "FleCSI-SP Libraries")
+set(PORTAGE_ENABLE_Jali @PORTAGE_ENABLE_Jali@ CACHE STRING "Use Jali")
 
 
-set(ENABLE_Jali @ENABLE_Jali@ CACHE STRING "Use Jali")
-set(Jali_INCLUDE_DIRS @Jali_INCLUDE_DIRS@ CACHE PATH "Jali include dirs")
-set(Jali_LIBRARIES @Jali_LIBRARIES@ CACHE STRING "Jali libraries")
+# Find target dependencies
 
+# Temporarily modify CMAKE module path so we can find our custom
+# modules for packages that don't have config files
 
-set(Jali_TPL_INCLUDE_DIRS @Jali_TPL_INCLUDE_DIRS@ CACHE PATH "Jali TPL include dirs")
-set(Jali_TPL_LIBRARIES @Jali_TPL_LIBRARIES@ CACHE STRING "Jali TPL libraries")
+set(SAVED_CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH})
+if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.15)
+  list(PREPEND CMAKE_MODULE_PATH @CMAKE_INSTALL_PREFIX@/lib/cmake/portage/module
+s)
+else ()
+  set(CMAKE_MODULE_PATH "@CMAKE_INSTALL_PREFIX@/lib/cmake/portage/modules;${CMAK
+E_MODULE_PATH}")
+endif ()
 
+include(CMakeFindDependencyMacro)
 
-set(LAPACKE_LIBRARIES @LAPACKE_LIBRARIES@ CACHE STRING "LAPACKE libraries")
-set(LAPACK_INCLUDE_DIRS @LAPACKE_INCLUDE_DIRS@ CACHE STRING "LAPACKE include dirs")
+if (PORTAGE_ENABLE_TANGRAM)
+  find_dependency(TANGRAM REQUIRED NAMES tangram)
+endif ()
 
-set(TANGRAM_FOUND @TANGRAM_FOUND@ CACHE BOOL "Tangram status")
-set(TANGRAM_DIR @TANGRAM_DIR@ CACHE PATH "Tangram installation dir")
-set(TANGRAM_INCLUDE_DIRS @TANGRAM_INCLUDE_DIRS@ CACHE PATH "Tangram include dirs")
+find_dependency(WONTON REQUIRED NAMES wonton)
 
-set(XMOF2D_FOUND @XMOF2D_FOUND@ CACHE BOOL "XMOF2D status")
-set(XMOF2D_LIBRARIES @XMOF2D_LIBRARIES@ CACHE STRING "XMOF2D libraries")
+# Restore original CMAKE_MODULE_PATH
+set(CMAKE_MODULE_PATH ${SAVED_CMAKE_MODULE_PATH})
 
+#
+# Import Tangram targets
+#
 
-set(ENABLE_THRUST @ENABLE_THRUST@ CACHE BOOL "Enable NVIDIA Thrust")
-set(THRUST_DIR @THRUST_DIR@ CACHE PATH "Thrust installation directory")
-set(THRUST_BACKEND @THRUST_BACKEND@ CACHE STRING "Thrust backedn to use")
-
-set(Boost_FOUND @Boost_FOUND@ CACHE BOOL "Boost status")
-set(Boost_INCLUDE_DIRS @Boost_INCLUDE_DIRS@ "Boost include directories")
-
-set(PORTAGE_COMPILE_DEFINITIONS @PORTAGE_COMPILE_DEFINITIONS@ CACHE STRING "All compiler definitions used at the top level directory")
-set(PORTAGE_LIBRARIES @PORTAGE_LIBRARIES@ CACHE STRING "All extra libraries needed to link with PORTAGE")
-
-
-
-
-
-
+include("@CMAKE_INSTALL_PREFIX@/lib/cmake/portage/portageTargets.cmake")
