--- a/portage/distributed/CMakeLists.txt
+++ b/portage/distributed/CMakeLists.txt
@@ -5,42 +5,42 @@ Please see the license file at the root of this repository, or at:
 ]]
 #-----------------------------------------------------------------------------~#
 
-project(portage_distribute)
+project(portage_distributed)
 
-add_library(portage_distribute INTERFACE)
+add_library(portage_distributed INTERFACE)
 
-target_include_directories(portage_distribute INTERFACE
+target_include_directories(portage_distributed INTERFACE
   $<BUILD_INTERFACE:${portage_SOURCE_DIR}>
   $<BUILD_INTERFACE:${portage_BINARY_DIR}>
   $<INSTALL_INTERFACE:include>
   )
 
 # Add header files
-set(portage_distribute_HEADERS
+set(portage_distributed_HEADERS
     mpi_bounding_boxes.h
     mpi_particle_distribute.h
     )
 
 # Not yet allowed for INTERFACE libraries
 # 
-# set_target_properties(portage_distribute PROPERTIES
-#   PUBLIC_HEADER "${portage_distribute_HEADERS}")
+# set_target_properties(portage_distributed PROPERTIES
+#   PUBLIC_HEADER "${portage_distributed_HEADERS}")
 #
 # Directly install files instead
 #
-install(FILES ${portage_distribute_HEADERS} DESTINATION include/portage/distributed)
+install(FILES ${portage_distributed_HEADERS} DESTINATION include/portage/distributed)
 
-target_link_libraries(portage_distribute INTERFACE portage_support)
+target_link_libraries(portage_distributed INTERFACE portage_support)
 
-target_link_libraries(portage INTERFACE portage_distribute)
+target_link_libraries(portage INTERFACE portage_distributed)
 
-install(TARGETS portage_distribute
+install(TARGETS portage_distributed
   EXPORT portage_LIBRARIES
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
-  PUBLIC_HEADER DESTINATION include/portage/distribute
-  INCLUDES DESTINATION include/portage/distribute
+  PUBLIC_HEADER DESTINATION include/portage/distributed
+  INCLUDES DESTINATION include/portage/distributed
   )
 
 
@@ -49,13 +49,13 @@ if (ENABLE_UNIT_TESTS)
   if (WONTON_ENABLE_Jali)
     portage_add_unittest(test_mpi_bounding_boxes
                    SOURCES test/test_mpi_bounding_boxes.cc
-                   LIBRARIES portage_distribute
+                   LIBRARIES portage_distributed
                    POLICY MPI
                    THREADS 4)
 
     portage_add_unittest(test_mpi_particle_distribute
                    SOURCES test/test_mpi_particle_distribute.cc
-                   LIBRARIES portage_distribute
+                   LIBRARIES portage_distributed
                    POLICY MPI
                    THREADS 4)
   endif ()
