--- a/cmake/portageConfig.cmake.in
+++ b/cmake/portageConfig.cmake.in
@@ -45,8 +45,7 @@ if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.15)
   list(PREPEND CMAKE_MODULE_PATH @CMAKE_INSTALL_PREFIX@/lib/cmake/portage/module
 s)
 else ()
-  set(CMAKE_MODULE_PATH "@CMAKE_INSTALL_PREFIX@/lib/cmake/portage/modules;${CMAK
-E_MODULE_PATH}")
+  set(CMAKE_MODULE_PATH "@CMAKE_INSTALL_PREFIX@/lib/cmake/portage/modules;${CMAKE_MODULE_PATH}")
 endif ()
 
 include(CMakeFindDependencyMacro)
