BUILD_TYPE --> CONFIG_TYPE

--- a/jenkins/axis_hpc_nightly.yml
+++ b/jenkins/axis_hpc_nightly.yml
@@ -4,7 +4,7 @@ COMPILER:
   - gcc6
   - gcc7
 
-BUILD_TYPE:
+CONFIG_TYPE:
   - base
   - debug
   - serial
@@ -13,7 +13,7 @@ BUILD_TYPE:
 
 exclude:
   - COMPILER: gcc6
-    BUILD_TYPE: readme
+    CONFIG_TYPE: readme
   - COMPILER: gcc7
-    BUILD_TYPE: readme
+    CONFIG_TYPE: readme
 
