--- a/jenkins/axis_hpc_pr.yml
+++ b/jenkins/axis_hpc_pr.yml
@@ -3,7 +3,7 @@ COMPILER:
   - intel18
   - gcc7
 
-BUILD_TYPE:
+CONFIG_TYPE:
   - base
   - debug
   - serial
@@ -13,7 +13,7 @@ BUILD_TYPE:
 
 exclude:
   - COMPILER: gcc7
-    BUILD_TYPE: readme
+    CONFIG_TYPE: readme
   
   - COMPILER: intel18
-    BUILD_TYPE: coverage
+    CONFIG_TYPE: coverage
