Hack to Fix Portage Build System
Incrediblyu elegant hack to fix portage build system by explicitly adding C as a dependency at the top level, rather than only in a sub-project, which ensures CMake sets all variables correctly during find package scripts and the like

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ Please see the license file at the root of this repository, or at:
 
 cmake_minimum_required(VERSION 3.13)
 
-project(portage CXX)
+project(portage CXX C)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
