fix dependent libraries name

--- a/portage/distributed/CMakeLists.txt
+++ b/portage/distributed/CMakeLists.txt
@@ -61,7 +61,7 @@ if (ENABLE_UNIT_TESTS)
 
     portage_add_unittest(test_mpi_ghost_manager
                SOURCES test/test_mpi_ghost_manager.cc
-               LIBRARIES portage_distribute
+               LIBRARIES portage_distributed
                POLICY MPI
                THREADS 4)
   endif ()
