--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory(simple_mesh_app)
 add_subdirectory(swarmapp)
 add_subdirectory(msmapp)
 add_subdirectory(momentumapp)
+add_subdirectory(particle-analysis)
 
 option(ENABLE_APP_TIMINGS "Enable timing in apps" OFF)
 
