--- a/jenkins/axis_varan_nightly.yml
+++ b/jenkins/axis_varan_nightly.yml
@@ -1,8 +1,7 @@
-# axis_varan.yml
+# axis_varan_nightly.yml
 # matrix of builds tested nightly on varan
 COMPILER:
   - intel18
-  - gcc6
   - gcc7
 
 CONFIG_TYPE:
@@ -11,16 +10,14 @@ CONFIG_TYPE:
   - serial
   - thrust
   - flecsi
-  - coverage
   - readme
+  - singlemat
 
 exclude:
   - COMPILER: intel18
     CONFIG_TYPE: flecsi
   - COMPILER: intel18
-    CONFIG_TYPE: coverage
-  - COMPILER: gcc6
-    CONFIG_TYPE: readme
+    CONFIG_TYPE: thrust
   - COMPILER: gcc7
     CONFIG_TYPE: readme
   - COMPILER: gcc7
